--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+################################################################
+# https://github.com/github/gitignore/blob/main/Godot.gitignore
+# LICENSE: https://github.com/github/gitignore/blob/main/LICENSE
+################################################################
+
+# Godot 4+ specific ignores
+.godot/
+
 # Godot-specific ignores
 .import/
 export.cfg
@@ -9,3 +17,4 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+mono_crash.*.json
